# kmeleon-agent-api

./: .env.tmplt  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
READMEs/alembic/: README.md  create_and_run_a_migration.md  how_create_and_run_a_migration.md
READMEs/log/: 2_14_2025.md
alembic/: env.py
alembic/versions/: e60100701396_add_accounts_table.py
src/: main.py
src/config/: db_config.py
src/core/schemas/: Prompt.py
src/core/tools/: __init__.py  get_current_and_forecasted_weather.py  get_historical_weather_data_for_timestamp.py  get_weather.py
src/db/: database.py  models.py
src/middleware/: get_current_user.py  get_db.py
src/routers/auth/: router.py
src/routers/chat/: router.py
src/routers/chatStream/: router.py
src/routers/healthcheck/: router.py
test/: kmeleon-agent-api.postman_collection.json
