[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.12",
    "fastapi>=0.115.8",
    "langchain-openai>=0.3.5",
    "python-dotenv>=1.0.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.34.0",
]
